<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            app:useSimpleSummaryProvider="true"
            android:key="note_style_key"
            android:icon="@drawable/ic_style"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - yyyy/MM/dd"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            app:useSimpleSummaryProvider="true"
            android:key="time_format_key"
            android:icon="@drawable/ic_time_format"
            android:title="@string/chose_time_format" />
        <Preference
            android:title="@string/remove_ads"
            android:key="remove_ads_key"
            android:summary="@string/remove_ads_summery"
            android:icon="@drawable/ic_remove_ads"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="green"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_theme_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="18"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            app:useSimpleSummaryProvider="true"
            android:key="title_text_key"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            app:useSimpleSummaryProvider="true"
            android:key="content_text_key"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceScreen>